# src/IO.Swagger/Models/LineItem.cs
@@ -1,0 +1,150 @@
+/*
+ * Just Order Api
+ *
+ * An API to create and retrieve Food items and orders.
+ *
+ * OpenAPI spec version: 1.0.0
+ * Contact: john.doe@somecomp.com
+ * Generated by: https://github.com/swagger-api/swagger-codegen.git
+ */
+using System;
+using System.Linq;
+using System.IO;
+using System.Text;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.ComponentModel.DataAnnotations;
+using System.Runtime.Serialization;
+using Newtonsoft.Json;
+
+namespace IO.Swagger.Models
+{ 
+    /// <summary>
+    /// List of Items that makes this order and their quantities.
+    /// </summary>
+    [DataContract]
+    public partial class LineItem : IEquatable<LineItem>
+    { 
+        /// <summary>
+        /// The Id of the item in the order
+        /// </summary>
+        /// <value>The Id of the item in the order</value>
+        [DataMember(Name="itemId")]
+        public Guid? ItemId { get; set; }
+
+        /// <summary>
+        /// The price of single line item.
+        /// </summary>
+        /// <value>The price of single line item.</value>
+        [DataMember(Name="itemPrice")]
+        public decimal? ItemPrice { get; set; }
+
+        /// <summary>
+        /// The number of items of this kind
+        /// </summary>
+        /// <value>The number of items of this kind</value>
+        [DataMember(Name="quantity")]
+        public decimal? Quantity { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            var sb = new StringBuilder();
+            sb.Append("class LineItem {\n");
+            sb.Append("  ItemId: ").Append(ItemId).Append("\n");
+            sb.Append("  ItemPrice: ").Append(ItemPrice).Append("\n");
+            sb.Append("  Quantity: ").Append(Quantity).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public string ToJson()
+        {
+            return JsonConvert.SerializeObject(this, Formatting.Indented);
+        }
+
+        /// <summary>
+        /// Returns true if objects are equal
+        /// </summary>
+        /// <param name="obj">Object to be compared</param>
+        /// <returns>Boolean</returns>
+        public override bool Equals(object obj)
+        {
+            if (ReferenceEquals(null, obj)) return false;
+            if (ReferenceEquals(this, obj)) return true;
+            return obj.GetType() == GetType() && Equals((LineItem)obj);
+        }
+
+        /// <summary>
+        /// Returns true if LineItem instances are equal
+        /// </summary>
+        /// <param name="other">Instance of LineItem to be compared</param>
+        /// <returns>Boolean</returns>
+        public bool Equals(LineItem other)
+        {
+            if (ReferenceEquals(null, other)) return false;
+            if (ReferenceEquals(this, other)) return true;
+
+            return 
+                (
+                    ItemId == other.ItemId ||
+                    ItemId != null &&
+                    ItemId.Equals(other.ItemId)
+                ) && 
+                (
+                    ItemPrice == other.ItemPrice ||
+                    ItemPrice != null &&
+                    ItemPrice.Equals(other.ItemPrice)
+                ) && 
+                (
+                    Quantity == other.Quantity ||
+                    Quantity != null &&
+                    Quantity.Equals(other.Quantity)
+                );
+        }
+
+        /// <summary>
+        /// Gets the hash code
+        /// </summary>
+        /// <returns>Hash code</returns>
+        public override int GetHashCode()
+        {
+            unchecked // Overflow is fine, just wrap
+            {
+                var hashCode = 41;
+                // Suitable nullity checks etc, of course :)
+                    if (ItemId != null)
+                    hashCode = hashCode * 59 + ItemId.GetHashCode();
+                    if (ItemPrice != null)
+                    hashCode = hashCode * 59 + ItemPrice.GetHashCode();
+                    if (Quantity != null)
+                    hashCode = hashCode * 59 + Quantity.GetHashCode();
+                return hashCode;
+            }
+        }
+
+        #region Operators
+        #pragma warning disable 1591
+
+        public static bool operator ==(LineItem left, LineItem right)
+        {
+            return Equals(left, right);
+        }
+
+        public static bool operator !=(LineItem left, LineItem right)
+        {
+            return !Equals(left, right);
+        }
+
+        #pragma warning restore 1591
+        #endregion Operators
+    }
+}
